Handle MIME filetype associations

--- a/assets/roblox-studio.desktop
+++ b/assets/roblox-studio.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Roblox Studio
 Comment=Develop Roblox games
 Icon=$APPLICATION_DIR/assets/roblox-studio.svg
-Exec=$APPLICATION_DIR/bin/grapejuice --studio --uri "%U"
+Exec=$APPLICATION_DIR/bin/grapejuice --studio --uri "%u%f"
 Actions=
 Categories=Development;
 StartupWMClass=RobloxStudioLauncherBeta.exe
