--- a/assets/roblox-player.desktop
+++ b/assets/roblox-player.desktop
@@ -6,7 +6,7 @@ NoDisplay=true
 OnlyShowIn=X-None;
 Comment=Play roblox games!
 Icon=$APPLICATION_DIR/assets/roblox-player.svg
-Exec=$APPLICATION_DIR/bin/grapejuice --player --uri "%U"
+Exec=$APPLICATION_DIR/bin/grapejuice --player --uri "%u"
 Actions=
 MimeType=x-scheme-handler/roblox-player;
 Categories=Game;
