--- a/assets/grapejuice.desktop
+++ b/assets/grapejuice.desktop
@@ -4,6 +4,7 @@ Type=Application
 Name=Grapejuice
 Comment=Manage Roblox
 Icon=$APPLICATION_DIR/assets/grapejuice.svg
-Exec=$APPLICATION_DIR/bin/grapejuice --gui
+Exec=$APPLICATION_DIR/bin/grapejuice gui
 Actions=
 Categories=Development;
+StartupWMClass=Grapejuice
