Make PyPI compatible

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 Python*
 *.tgz
 
+**/build/
+**/dist/
+**/*.egg-info
+
 # Created by https://www.gitignore.io/api/python,virtualenv,pycharm+all
 # Edit at https://www.gitignore.io/?templates=python,virtualenv,pycharm+all
 
