Make the studio launcher adhere to standards

--- a/src/grapejuice_common/assets/roblox-studio.desktop
+++ b/src/grapejuice_common/assets/roblox-studio.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Roblox Studio
 Comment=Develop Roblox games
 Icon=$APPLICATION_DIR/src/grapejuice_common/assets/roblox-studio.svg
-Exec=$APPLICATION_DIR/bin/grapejuice studio --uri "%u%f"
+Exec=$APPLICATION_DIR/bin/grapejuice studio "%u%f"
 Actions=
 Categories=Development;
 StartupWMClass=RobloxStudioLauncherBeta.exe
