--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,4 +2,4 @@ include:
   template: Dependency-Scanning.gitlab-ci.yml
 
 variables:
-  PIP_REQUIREMENTS_FILE=requirements.txt
+  PIP_REQUIREMENTS_FILE: requirements.txt
