--- a/src/grapejuice_common/assets/desktop/roblox-studio.desktop
+++ b/src/grapejuice_common/assets/desktop/roblox-studio.desktop
@@ -1,11 +1,10 @@
 [Desktop Entry]
-Version=1.1
+Version=1.0
 Type=Application
 Name=Roblox Studio
 Comment=Develop Roblox games
-Icon=$APPLICATION_DIR/src/grapejuice_common/assets/icons/hicolor/scalable/apps/grapejuice-roblox-studio.svg
-Exec=$APPLICATION_DIR/bin/grapejuice studio "%u%f"
-Actions=
+Icon=$STUDIO_ICON
+Exec=$GRAPEJUICE_EXECUTABLE studio "%u%f"
 Categories=Development;
 StartupWMClass=RobloxStudioLauncherBeta.exe
 MimeType=x-scheme-handler/roblox-studio
