--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,11 @@ grapejuice:test:
         - pipenv install --dev
         - pipenv run pytest tests
 
+grapejuice:test_local_installation:
+    stage:test
+    script:
+        - ./install.py
+
 grapejuice:linux_package:
     stage: deploy
     artifacts:
