--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 pytest = "*"
 coverage = "*"
+pyinstaller = "*"
 
 [packages]
 grapejuice = {editable = true,path = "."}
