--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ grapejuice:appimage:
         paths:
             - artifacts/
     script:
+        - pipenv install --system --dev
         - export PYTHONPATH=$(pwd)/src
         - python3 -m grapejuice_packaging app_image
         - cp dist/*.AppImage artifacts
